# BaseType

./: CMakeLists.txt  README.md
doc/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt
include/: CMakeLists.txt
include/Dagal/: BaseType.hpp
include/Dagal/BaseType/: Double.hpp  Vector2D.hpp
pkg-config/: BaseType.pc.in  CMakeLists.txt
src/: CMakeLists.txt  Double.cpp
tests/: CMakeLists.txt  test_BaseType.cpp
version-config/: BaseTypeConfig.h.in  CMakeLists.txt
